--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html,body {
 	font-family: monospace;
 }
 #stdin {
-	margin-left: 13px;
+	margin-left: 1em;
 	width: auto;
 	min-width: 1em;
 	height: auto;
@@ -21,7 +21,7 @@ html,body {
 }
 #stdout {
 	
-	margin-left: 13px;
+	margin-left: 1em;
 }
 #stdout,#stdout>* {
 	padding: 0;
